RAIN-4726, RAIN-4987:: UI fixed pdf alignment issue by adding margin & Fsm issue fix (#1210)
* v1.4.1

* RAIN-4987 inbox total now reflects the addition of pending issues only

* RAIN-4726 fixed pdf alignment issue by adding margin

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
@@ -155,11 +155,15 @@
 }
 
 .mrlg{
-  @apply mr-lg
+  @apply mr-lg;
 }
 
 .mrsm{
-  @apply mr-sm
+  @apply mr-sm;
+}
+
+.mbsm{
+  @apply mb-sm;
 }
 
 .home-link {
